# loan-risk-mlops

./: .dvcignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  aws-full-teardown.sh  aws-temp-stop.sh  details.txt  docker-compose.yml  dvc.yaml  params.yaml  predict.sh  process.md  pyproject.toml  run.sh
.dvc/: config
.github/workflows/: ci.yml  deploy-infra.yml  serve.yml  training.yml
config/: cloudwatch_dashboard.json  monitoring_thresholds.yaml  prometheus.yml  settings.yaml
ecs/: task-definition.json
infra/: bootstrap.sh
infra/terraform/: main.tf  outputs.tf  variables.tf
notebooks/: 01_eda.ipynb  02_model_comparison.ipynb
pipelines/: __init__.py  flows.py  schedules.py  tasks.py
sagemaker/: pipeline.py  run_pipeline.py
sagemaker/scripts/: download.py  evaluate.py  featurize.py  preprocess.py  promote.py  train.py
scripts/: download_dataset.py  generate_sample_data.py  preprocess_dataset.py  promote_model.py  run_pipeline.py
src/loan_risk/: __init__.py  config.py  exceptions.py  logging_setup.py
src/loan_risk/data/: __init__.py  ingestion.py  schemas.py  splits.py
src/loan_risk/evaluation/: __init__.py  bias_audit.py  explainability.py  metrics.py  report.py
src/loan_risk/features/: __init__.py  definitions.py  pipeline.py  transformers.py
src/loan_risk/monitoring/: __init__.py  alerts.py  drift.py  performance.py
src/loan_risk/registry/: __init__.py  client.py
src/loan_risk/serving/: __init__.py  app.py  middleware.py  predictor.py  (+2 more)
tests/: conftest.py
tests/integration/: test_api.py  test_pipeline_e2e.py
tests/unit/: test_metrics.py  test_schemas.py  test_splits.py  test_transformers.py
(+39 files in other folders)
