[project]
name = "loan-risk"
version = "0.1.0"
description = "Production-grade MLOps pipeline for loan default risk prediction"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0.0",
    "pandera[polars]>=0.20.0",
    "mlflow>=2.14.0",
    "optuna>=3.6.0",
    "lightgbm>=4.3.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.5.0",
    "shap>=0.45.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "structlog>=24.2.0",
    "evidently>=0.4.30",
    "prefect>=3.0.0",
    "prometheus-client>=0.20.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "pyarrow>=16.0.0",
    "imbalanced-learn>=0.12.0",
    "scipy>=1.13.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "dvc>=3.50.0",
    "requests>=2.32.0",
    "joblib>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "ipykernel>=6.29.0",
    "notebook>=7.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loan_risk"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src/loan_risk --cov-report=term-missing"
